# cover-letter-generator

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: expert-nextjs-developer.agent.md  simple-app-idea-generator.agent.md
docs/: clg-architecture-diagrams.html  clg-architecture-plan.md  clg-architecture.drawio
docs/architecture/: ADR-001-python-local-first.md  ADR-002-modular-monolith.md  ADR-003-provider-abstraction.md  ADR-004-local-cv-parsing.md  ADR-005-secret-storage.md  ADR-006-structured-profile-model.md
docs/diagrams/: component.mmd  cost-breakdown.mmd  data-flow.mmd  deployment.mmd  scalability-evolution.mmd  system-context.mmd
examples/: README.md  proxify-senior-fullstack.jd.txt  proxify-senior-fullstack.json  run_test_case.py
plan/: architecture-clg-mvp-1.md
src/clg/: __init__.py
src/clg/api/: __init__.py  app.py  deps.py  schemas.py
src/clg/api/routers/: __init__.py  export.py  generation.py  jobs.py  profiles.py  settings.py
src/clg/bootstrap/: __init__.py  launcher.py
src/clg/core/: __init__.py
src/clg/core/config/: __init__.py  settings.py
src/clg/core/export/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py  txt.py
src/clg/core/generation/: __init__.py  prompt.py  service.py
src/clg/core/ingestion/: __init__.py  parse.py  sectionize.py
src/clg/core/persistence/: __init__.py  db.py  models.py  repositories.py
src/clg/core/profile/: __init__.py  compose.py
src/clg/core/providers/: __init__.py  anthropic.py  base.py  fake.py  gemini.py  ollama.py  openai.py  registry.py
src/clg/core/secrets/: __init__.py  store.py
tests/: conftest.py  test_api.py  test_export.py  test_generation.py  test_ingestion.py  test_launcher.py  test_persistence.py  test_profile_compose.py  test_secrets.py  test_sectionize.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  SectionsEditor.tsx  Settings.tsx  api.ts  sections.test.tsx  styles.css  ui.tsx
