[project]
name = "clg"
version = "0.1.0"
description = "Cover Letter Generator — local-first, open-source cover letters for international tech roles (BYO key + local AI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vitor Cavalcante" }]
keywords = ["cover-letter", "llm", "ollama", "local-first", "fastapi"]

dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "cryptography>=43.0",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "jinja2>=3.1",
    "markdown>=3.7",
    "weasyprint>=63.0",
    "httpx>=0.27",
    "ollama>=0.4",
    "google-genai>=0.3",
    "anthropic>=0.40",
    "openai>=1.55",
]

[project.scripts]
clg = "clg.bootstrap.launcher:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clg"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"
# Curated third-party guidance folders are not part of our codebase.
extend-exclude = ["agents", "skills"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are called in argument defaults by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["clg"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.importlinter]
root_package = "clg"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Dependencies point inward (UI/API -> core; core is framework-agnostic)"
type = "layers"
layers = [
    "clg.bootstrap",
    "clg.api",
    "clg.core",
]

[[tool.importlinter.contracts]]
name = "Core domain must not import the web framework"
type = "forbidden"
source_modules = ["clg.core"]
forbidden_modules = ["fastapi", "starlette", "uvicorn"]
